[gd_scene load_steps=9 format=3 uid="uid://pkyl27hhew2r"]

[ext_resource type="PackedScene" uid="uid://dkka3268vckvm" path="res://Map.tscn" id="1_ax6oi"]
[ext_resource type="PackedScene" uid="uid://itfcpm77u6we" path="res://scenes/components/Unit/Unit.tscn" id="2_0hpix"]
[ext_resource type="Script" path="res://src/GameBoard.gd" id="2_m2y7v"]
[ext_resource type="PackedScene" uid="uid://bb5snevkd7k8n" path="res://scenes/components/Cursor/Cursor.tscn" id="3_aqkq1"]
[ext_resource type="PackedScene" uid="uid://dehvxoecc36hf" path="res://scenes/components/UnitPath/UnitPath.tscn" id="4_yur3p"]
[ext_resource type="Texture2D" uid="uid://bdw3u3ctpcywt" path="res://assets/squirrel.png" id="6_rfrmd"]
[ext_resource type="Texture2D" uid="uid://d2gmhonn8bx0j" path="res://assets/bugcat.png" id="8_thdnj"]
[ext_resource type="Texture2D" uid="uid://ct8g5wg5hixbc" path="res://assets/bear.png" id="9_l8ki5"]

[node name="Main" type="Node2D"]

[node name="Map" parent="." instance=ExtResource("1_ax6oi")]

[node name="GameBoard" type="Node2D" parent="."]
script = ExtResource("2_m2y7v")

[node name="UnitPath" parent="GameBoard" instance=ExtResource("4_yur3p")]

[node name="Cursor" parent="GameBoard" instance=ExtResource("3_aqkq1")]
position = Vector2(40, 20)

[node name="Unit" parent="GameBoard" instance=ExtResource("2_0hpix")]
position = Vector2(40, 20)
skin = ExtResource("6_rfrmd")

[node name="Unit2" parent="GameBoard" instance=ExtResource("2_0hpix")]
position = Vector2(40, 20)
skin = ExtResource("8_thdnj")
skin_offset = Vector2(0, -5)

[node name="Unit3" parent="GameBoard" instance=ExtResource("2_0hpix")]
position = Vector2(1120, 0)
move_range = 4
skin = ExtResource("9_l8ki5")
skin_offset = Vector2(0, -10)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1120, 0)

[connection signal="accept_pressed" from="GameBoard/Cursor" to="GameBoard" method="_on_cursor_accept_pressed"]
[connection signal="moved" from="GameBoard/Cursor" to="GameBoard" method="_on_cursor_moved"]
